Fixed spacing btwn profile pic & name

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,21 @@
 .wrap-primary-plan {
-  background-image: url("images/Coding-Laptop.jpg");
+  background-image: url("images/javascript-developer.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 40%;
+  background-position: 50% 35%;
   min-height: 375px;
 }
 
 .Header-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  margin-left: 13%;
 }
 .home-profile-img {
   width: 10%;
   display: flex;
+  padding-right: 20%;
 }
 
 .home-profile-img img {
@@ -31,7 +33,7 @@ header h1 {
   text-shadow: 0 1px 2px rgba(0 0 0 / 75%);
   font-size: 3em;
   text-align: center;
-  color: #dc2f02;
+  color: #d4d700;
   font-family: "Lato", sans-serif;
   border-bottom: 0ch;
   margin: 20px 0px 17px;
@@ -41,7 +43,7 @@ header h2 {
   text-shadow: 0 1px 2px rgba(0 0 0 / 75%);
   font-size: 1.7em;
   text-align: center;
-  color: #ced4da;
+  color: #09a6f3;
   border-top: 0ch;
   display: flex;
   margin: 20px 0px 17px;
